--- a/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
@@ -8,7 +8,7 @@
 */
 
 #cover-image-container {
-	flex: 1;
+	flex: 0 0 100%;
 	position: relative;
 }
 
@@ -29,8 +29,6 @@
 }
 
 #item-header-cover-image {
-	display: flex;
-	flex-flow: row wrap;
 	margin-bottom: 1em;
 	position: relative;
 	z-index: 2;
@@ -42,12 +40,15 @@
 }
 
 #item-header-avatar img {
+	border: solid 2px #fff;
+	background: rgba(255, 255, 255, 0.8);
 	box-shadow: none;
 	display: block;
 	margin: 0 auto;
 }
 
-.users-header #item-header-content {
+.users-header #item-header-cover-image #item-header-content {
+	flex: 1;
 	margin-top: -50px;
 }
 
