--- a/src/bp-templates/bp-nouveau/common-styles/_bp_item_header_general.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_item_header_general.scss
@@ -4,8 +4,6 @@
 @include clearfix-element(".single-headers");
 
 .single-headers {
-	display: flex;
-	flex-flow: row wrap;
 	margin-bottom: $marg-med;
 
 	// Breakpoint element positioning
@@ -13,9 +11,11 @@
 	#item-header-avatar { // todo: this ought to be a class!
 
 		a {
+			border: 0;
 			display: block;
 			position: relative;
 			text-align: center;
+			text-decoration: none;
 		}
 	}
 
@@ -87,6 +87,11 @@
 
 	} // close h2
 
+	.item-header-wrap {
+		display: flex;
+		flex-flow: row wrap;
+	}
+
 	img.avatar {
 		//float: left;
 		margin: 0 15px 19px 0;
@@ -101,20 +106,28 @@
 	}
 
 	ul {
-		margin-bottom: $marg-med;
+		list-style: none;
+		margin: 0;
 
-		li {
-			float: right;
-			list-style: none;
+		// if these are list constructs
+		> .generic-button {
+			display: inline-block;
+			text-align: center;
+			margin: 5px 10px 10px 0;
+		}
+
+	}
+
+	.member-header-actions {
+
+		> .generic-button {
+			display: inline-block;
+			text-align: center;
+			margin: 5px 10px 10px 0;
 		}
 	}
 
 	div.generic-button {
-		text-align: center;
-	}
-
-	li.generic-button {
-		display: inline-block;
 		text-align: center;
 	}
 
@@ -127,20 +140,6 @@
 		}
 	}
 
-	div.generic-button,
-	a.button {
-		margin: $marg-sml $marg-sml 0 0;
-	}
-
-	// if these are list constructs
-	li.generic-button {
-		margin: 2px 10px;
-	}
-
-	li.generic-button:first-child {
-		margin-left: 0;
-	}
-
 	div#message.info {
 		line-height: 0.8;
 	}
@@ -151,9 +150,20 @@ body.no-js  .single-item-header .js-self-profile-button {
 	display: none;
 }
 
+#create-group-form #header-cover-image {
+	margin-bottom: $marg-med;
+}
+
+@media screen and (min-width: 783px) {
+
+	#item-header-avatar {
+		padding-right: $pad-med;
+	}
+}
+
 @media screen and (max-width: 782px) {
 
-	.single-headers {
+	.single-headers .item-header-wrap {
 		flex-flow: column;
 	}
 
