--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2223,6 +2223,7 @@ body.no-js .single-item-header .js-self-profile-button {
 #item-header-cover-image #item-header-avatar {
   margin-top: -80px;
   padding: 0 1em;
+  position: relative;
 }
 
 #item-header-avatar img {
@@ -2236,34 +2237,6 @@ body.no-js .single-item-header .js-self-profile-button {
 .users-header #item-header-cover-image #item-header-content {
   flex: 1;
   margin-top: -50px;
-}
-
-#item-header .icon-wrap {
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.8);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 30px;
-  height: 30px;
-  right: 12px;
-  top: 12px;
-  opacity: 0;
-  transition: all 0.2s;
-  -webkit-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
-}
-
-#header-cover-image .link-change-cover-image {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 3;
-}
-
-#header-cover-image:hover .icon-wrap {
-  opacity: 1;
 }
 
 /*
@@ -2900,15 +2873,34 @@ body.register .buddypress-wrap .page ul {
   margin-top: 20px;
 }
 
-#item-header-avatar .icon-wrap {
+#item-header a.link-change-cover-image,
+#item-header a.link-change-profile-image {
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
-  bottom: 12px;
-  top: auto;
+  width: 30px;
+  height: 30px;
+  right: 12px;
+  top: 12px;
+  z-index: 3;
+  opacity: 0;
+  transition: all 0.2s;
+  -webkit-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.2);
+}
+
+#item-header-avatar a.link-change-profile-image {
+  top: 100px;
   right: 50%;
   margin-right: -15px;
 }
 
-#item-header-avatar:hover .icon-wrap {
+#header-cover-image:hover a.link-change-cover-image,
+#item-header-avatar:hover a.link-change-profile-image {
   opacity: 1;
 }
 
