--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -801,6 +801,11 @@ body.buddypress article.page > .entry-header .entry-title {
   text-align: center;
 }
 
+.buddypress-wrap .subnav-filters .grid-filters {
+  float: left;
+  padding: 8px 10px 8px 0;
+}
+
 /**
 *----------------------------------------------------------
 * @section 2.2 - Pagination
@@ -2911,6 +2916,17 @@ body.register .buddypress-wrap .page ul {
   .single-headers li.generic-button {
     float: none;
   }
+}
+
+.buddypress-wrap .profile.edit .repeater_group_outer {
+  margin: 0 0 15px;
+  padding: 15px;
+  border: 1px solid #ddd;
+}
+
+.buddypress-wrap .profile.edit .repeater_group_outer .repeater_tools {
+  cursor: move;
+  text-align: left;
 }
 
 /**
