--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -2756,6 +2756,28 @@ body.no-js .single-item-header .js-self-profile-button {
   display: inline;
 }
 
+.buddypress-wrap .profile.edit .repeater_group_outer {
+  margin: 0 0 15px;
+  padding: 15px;
+  cursor: move;
+  background: #fff;
+  border: 1px solid #eee;
+}
+
+.buddypress-wrap .profile.edit .repeater_group_outer .repeater_tools {
+  text-align: right;
+}
+
+.buddypress-wrap .profile.edit .repeater_group_outer .repeater_tools .repeater_set_title {
+  float: left;
+  display: inline-block;
+}
+
+.buddypress-wrap .profile.edit .repeater_group_outer .repeater_tools .repeater_set_edit,
+.buddypress-wrap .profile.edit .repeater_group_outer .repeater_tools .repeater_set_delete {
+  cursor: pointer;
+}
+
 .buddypress-wrap .profile.edit .editfield {
   display: flex;
   flex-direction: column;
@@ -2916,17 +2938,6 @@ body.register .buddypress-wrap .page ul {
   .single-headers li.generic-button {
     float: none;
   }
-}
-
-.buddypress-wrap .profile.edit .repeater_group_outer {
-  margin: 0 0 15px;
-  padding: 15px;
-  border: 1px solid #ddd;
-}
-
-.buddypress-wrap .profile.edit .repeater_group_outer .repeater_tools {
-  cursor: move;
-  text-align: right;
 }
 
 /**
