Thumbs up icon for likes/favorites

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -270,11 +270,12 @@
 			}
 
 			.fav:before {
-				content: "\f154";
+				content: "\f529";
 			}
 
 			.unfav:before {
-				content: "\f155";
+				content: "\f529";
+				color: #0061ac;
 			}
 
 			.delete-activity:before {
