--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1469,11 +1469,12 @@ body.buddypress article.page > .entry-header .entry-title {
 }
 
 .activity-list .activity-item .activity-meta.action .fav:before {
-  content: "\f154";
+  content: "\f529";
 }
 
 .activity-list .activity-item .activity-meta.action .unfav:before {
-  content: "\f155";
+  content: "\f529";
+  color: #0061ac;
 }
 
 .activity-list .activity-item .activity-meta.action .delete-activity:before {
