repeater separator CSS

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_tables.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_tables.scss
@@ -75,6 +75,10 @@
 			padding: $pad-sml $pad-med;
 		}
 
+		.repeater-separator {
+			background: transparent;
+		}
+
 		tr:last-child {
 			border-bottom: none;
 		}
