Repeater Set UI

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_buttons.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_buttons.scss
@@ -30,6 +30,7 @@
 			font-size: inherit;
 			font-weight: 400;
 			outline: none;
+			line-height: 1.3;
 			padding: $pad-xsml $pad-sml;
 			text-align: center;
 			text-decoration: none;
