--- a/src/bp-templates/bp-nouveau/common-styles/_bp_filters.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_filters.scss
@@ -207,7 +207,37 @@
 
 	.subnav-filters .grid-filters {
 		float: right;
-		padding: 8px 0 8px 10px;
+		padding: 0;
+		margin-left: 10px;
 	}
 
 } // close .buddypress-wrap
+
+.grid-filters {
+	display: flex;
+	align-items: center;
+	border: 1px solid #eee;
+	height: 36px;
+
+	a {
+		color: #ccc;
+		padding: 0 6px;
+		line-height: 36px;
+	}
+
+	a, a:active, a:focus {
+	   outline: none;
+	}
+
+	a i {
+		vertical-align: middle;
+	}
+
+	a.active {
+		color: #222;
+	}
+}
+
+a.layout-grid-view {
+	border-right: 1px solid #eee;
+}
